# fastapi-supabase

./: .env.example  .gitignore  main.py  pyproject.toml  settings.py
core/: responses.py
db/: postgres.py  supabase.py
models/: Book.py
repository/: book.py  book_supabase.py
routes/: book.py  book_supabase.py
schemas/: book.py
