[tool.poetry]
name = "fasatapi-supabase"
version = "0.1.0"
description = ""
authors = ["Luqman Rofif M"]
readme = "README.md"
packages = [{include = "fasatapi_supabase"}]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"
pydantic = "^2.10.6"
sqlalchemy = "^2.0.39"
databases = "^0.9.0"
asyncpg = "^0.30.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
